Use methods from `SequencedCollection`