@@ -149,8 +149,8 @@ class SummaryGenerationTests {
 		listener.testPlanExecutionFinished(testPlan);
 		final var failures = listener.getSummary().getFailures();
 		assertThat(failures).hasSize(1);
-		assertThat(failures.get(0).getException()).isEqualTo(failedException);
-		assertThat(failures.get(0).getTestIdentifier()).isEqualTo(failingTest);
+		assertThat(failures.getFirst().getException()).isEqualTo(failedException);
+		assertThat(failures.getFirst().getTestIdentifier()).isEqualTo(failingTest);
 	}
 
 	@Test
